--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -38,15 +38,19 @@ jobs:
     - name: Run migrations
       env:
         DATABASE_URL: postgres://youruser:yourpassword@localhost:5432/yourdbname
-      run: |
-        python manage.py migrate
-      env: 
         DB_Name: ${{ env.DB_NAME}}
         DB_USER: ${{ env.DB_USER}}
         DB_PASSWORD: ${{ env.DB_PASSWORD}}
+      run: |
+        python manage.py migrate
+       
+       
 
     - name: Run tests
       env:
         DATABASE_URL: postgres://youruser:yourpassword@localhost:5432/yourdbname
+        DB_Name: ${{ env.DB_NAME}}
+        DB_USER: ${{ env.DB_USER}}
+        DB_PASSWORD: ${{ env.DB_PASSWORD}}
       run: |
         python manage.py test
