--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -38,12 +38,12 @@ jobs:
 
     - name: Run migrations
       env:
-        DATABASE_URL: postgres://youruser:yourpassword@0.0.0.0:5432/yourdbname
+        DATABASE_URL: postgres://youruser:yourpassword@127.0.0.1:5432/yourdbname
         DB_NAME: yourdbname
         DB_USER: youruser
         DB_PASSWORD: yourpassword
         DB_PORT: 5432
-        DB_HOST: postgres://youruser:yourpassword@postgres:5432/yourdbname
+        DB_HOST: postgres://youruser:yourpassword@127.0.0.1:5432/yourdbname
         
       run: |
         python manage.py migrate
