--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,12 +50,12 @@ jobs:
        
        
 
-    # - name: Run tests
-    #   env:
-    #     DATABASE_URL: postgres://youruser:yourpassword@localhost:5432/yourdbname
-    #     DB_NAME: yourdbname
-    #     DB_USER: youruser
-    #     DB_PASSWORD: yourpassword
-    #     DB_PORT: 5432
-    #   run: |
-    #     python manage.py test
+    - name: Run tests
+      env:
+        DATABASE_URL: postgres://youruser:yourpassword@localhost:5432/yourdbname
+        DB_NAME: yourdbname
+        DB_USER: youruser
+        DB_PASSWORD: yourpassword
+        DB_PORT: 5432
+      run: |
+        python manage.py test
