--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ backports.zoneinfo==0.2.1
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
+coverage==7.3.2
 cryptography==41.0.5
 defusedxml==0.7.1
 dj-rest-auth==5.0.2
 Django==4.2.7
 django-allauth==0.58.2
+django-cors-headers==4.3.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 idna==3.4
 oauthlib==3.2.2
 psycopg2==2.9.9
