--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,49 @@
+amqp==5.2.0
 asgiref==3.7.2
+async-timeout==4.0.3
 backports.zoneinfo==0.2.1
+billiard==4.2.0
+celery==5.3.6
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 coverage==7.3.2
+cron-descriptor==1.4.0
 cryptography==41.0.5
 defusedxml==0.7.1
 dj-rest-auth==5.0.2
 Django==4.2.7
 django-allauth==0.58.2
+django-celery-beat==2.5.0
 django-cors-headers==4.3.1
+django-extensions==3.2.3
+django-timezone-field==6.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 idna==3.4
+kombu==5.3.4
 oauthlib==3.2.2
+prompt-toolkit==3.0.43
 psycopg2==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
+python-crontab==3.0.0
+python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3.post1
+redis==5.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
+tzdata==2023.3
 urllib3==2.1.0
+vine==5.1.0
+wcwidth==0.2.12
