--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.7.2
 async-timeout==4.0.3
 backports.zoneinfo==0.2.1
 billiard==4.2.0
+cachetools==5.3.2
 celery==5.3.6
 certifi==2023.11.17
 cffi==1.16.0
@@ -24,11 +25,31 @@ django-extensions==3.2.3
 django-timezone-field==6.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+finnhub-python==2.4.19
+google-api-core==2.15.0
+google-auth==2.26.2
+google-cloud-aiplatform==1.39.0
+google-cloud-bigquery==3.16.0
+google-cloud-core==2.4.1
+google-cloud-resource-manager==1.11.0
+google-cloud-storage==2.14.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
+googleapis-common-protos==1.62.0
+grpc-google-iam-v1==0.13.0
+grpcio==1.60.0
+grpcio-status==1.60.0
 idna==3.4
 kombu==5.3.4
+numpy==1.24.4
 oauthlib==3.2.2
+packaging==23.2
 prompt-toolkit==3.0.43
+proto-plus==1.23.0
+protobuf==4.25.2
 psycopg2==2.9.9
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pycparser==2.21
 PyJWT==2.8.0
 python-crontab==3.0.0
@@ -40,6 +61,8 @@ pytz==2023.3.post1
 redis==5.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
+rsa==4.9
+shapely==2.0.2
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
@@ -47,9 +70,3 @@ tzdata==2023.3
 urllib3==2.1.0
 vine==5.1.0
 wcwidth==0.2.12
-# new additions(delete if thats causing issues)
-# sudo service rabbitmq-server start
-# sudo systemctl enable rabbitmq-server
-# sudo service rabbitmq-server status
-# sudo service rabbitmq-server restart
-# celery -A your_project_name worker --loglevel=info
