--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,8 @@ kombu==5.3.4
 numpy==1.24.4
 oauthlib==3.2.2
 packaging==23.2
+pandas==2.0.3
+patsy==0.5.6
 prompt-toolkit==3.0.43
 proto-plus==1.23.0
 protobuf==4.25.2
@@ -62,9 +64,11 @@ redis==5.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+scipy==1.10.1
 shapely==2.0.2
 six==1.16.0
 sqlparse==0.4.4
+statsmodels==0.14.1
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.1.0
