--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -44,6 +44,11 @@ jobs:
         DB_PASSWORD: yourpassword
         DB_PORT: 5432
         DB_HOST: localhost
+        SECRETKEY: SECRETKEY
+        EMAIL_HOST_USER: EMAIL_HOST_USER 
+        DEFAULT_FROM_EMAIL: DEFAULT_FROM_EMAIL
+        SERVER_EMAIL: SERVER_EMAIL
+              
         
       run: |
         python manage.py migrate
